@@ -2,62 +2,69 @@ package com.simibubi.create.compat.jei.category;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Optional;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
 
+import javax.annotation.ParametersAreNonnullByDefault;
+
+import org.jetbrains.annotations.NotNull;
+
+import com.mojang.blaze3d.vertex.PoseStack;
 import com.simibubi.create.AllFluids;
-import com.simibubi.create.Create;
-import com.simibubi.create.compat.jei.DoubleItemIcon;
-import com.simibubi.create.compat.jei.EmptyBackground;
 import com.simibubi.create.content.contraptions.fluids.potion.PotionFluidHandler;
 import com.simibubi.create.content.contraptions.processing.ProcessingOutput;
-import com.simibubi.create.content.contraptions.processing.ProcessingRecipe;
-import com.simibubi.create.foundation.fluid.FluidIngredient;
 import com.simibubi.create.foundation.gui.AllGuiTextures;
 import com.simibubi.create.foundation.utility.Lang;
 
+import mezz.jei.api.forge.ForgeTypes;
 import mezz.jei.api.gui.drawable.IDrawable;
-import mezz.jei.api.gui.ingredient.IGuiFluidStackGroup;
-import mezz.jei.api.gui.ingredient.IGuiItemStackGroup;
+import mezz.jei.api.gui.ingredient.IRecipeSlotTooltipCallback;
+import mezz.jei.api.recipe.RecipeType;
 import mezz.jei.api.recipe.category.IRecipeCategory;
-import net.minecraft.item.ItemStack;
-import net.minecraft.item.crafting.IRecipe;
-import net.minecraft.util.IItemProvider;
-import net.minecraft.util.ResourceLocation;
-import net.minecraft.util.text.ITextComponent;
-import net.minecraft.util.text.StringTextComponent;
-import net.minecraft.util.text.TextFormatting;
+import mezz.jei.api.registration.IRecipeCatalystRegistration;
+import mezz.jei.api.registration.IRecipeRegistration;
+import net.minecraft.ChatFormatting;
+import net.minecraft.MethodsReturnNonnullByDefault;
+import net.minecraft.network.chat.Component;
+import net.minecraft.network.chat.TextComponent;
+import net.minecraft.resources.ResourceLocation;
+import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.item.crafting.Recipe;
 import net.minecraftforge.fluids.FluidStack;
 
-public abstract class CreateRecipeCategory<T extends IRecipe<?>> implements IRecipeCategory<T> {
+@ParametersAreNonnullByDefault
+@MethodsReturnNonnullByDefault
+public abstract class CreateRecipeCategory<T extends Recipe<?>> implements IRecipeCategory<T> {
+	private static final IDrawable BASIC_SLOT = asDrawable(AllGuiTextures.JEI_SLOT);
+	private static final IDrawable CHANCE_SLOT = asDrawable(AllGuiTextures.JEI_CHANCE_SLOT);
 
-	public final List<Supplier<List<? extends IRecipe<?>>>> recipes = new ArrayList<>();
-	public final List<Supplier<? extends Object>> recipeCatalysts = new ArrayList<>();
+	protected final RecipeType<T> type;
+	protected final Component title;
+	protected final IDrawable background;
+	protected final IDrawable icon;
 
-	protected ResourceLocation uid;
-	protected String name;
-	private IDrawable background;
-	private IDrawable icon;
+	private final Supplier<List<T>> recipes;
+	private final List<Supplier<? extends ItemStack>> catalysts;
 
-	public CreateRecipeCategory(IDrawable icon, IDrawable background) {
-		this.background = background;
-		this.icon = icon;
+	public CreateRecipeCategory(Info<T> info) {
+		this.type = info.recipeType();
+		this.title = info.title();
+		this.background = info.background();
+		this.icon = info.icon();
+		this.recipes = info.recipes();
+		this.catalysts = info.catalysts();
 	}
 
-	public void setCategoryId(String name) {
-		this.uid = Create.asResource(name);
-		this.name = name;
+	@NotNull
+	@Override
+	public RecipeType<T> getRecipeType() {
+		return type;
 	}
 
 	@Override
-	public ResourceLocation getUid() {
-		return uid;
-	}
-
-	@Override
-	public String getTitle() {
-		return Lang.translate("recipe." + name)
-			.getString();
+	public Component getTitle() {
+		return title;
 	}
 
 	@Override
@@ -70,49 +77,48 @@ public abstract class CreateRecipeCategory<T extends IRecipe<?>> implements IRec
 		return icon;
 	}
 
-	public static AllGuiTextures getRenderedSlot(IRecipe<?> recipe, int index) {
-		AllGuiTextures jeiSlot = AllGuiTextures.JEI_SLOT;
-		if (!(recipe instanceof ProcessingRecipe))
-			return jeiSlot;
-		ProcessingRecipe<?> processingRecipe = (ProcessingRecipe<?>) recipe;
-		List<ProcessingOutput> rollableResults = processingRecipe.getRollableResults();
-		if (rollableResults.size() <= index)
-			return jeiSlot;
-		if (processingRecipe.getRollableResults()
-			.get(index)
-			.getChance() == 1)
-			return jeiSlot;
-		return AllGuiTextures.JEI_CHANCE_SLOT;
+	@Override
+	@Deprecated
+	public final ResourceLocation getUid() {
+		return type.getUid();
 	}
 
-	public static IDrawable emptyBackground(int width, int height) {
-		return new EmptyBackground(width, height);
+	@Override
+	@Deprecated
+	public final Class<? extends T> getRecipeClass() {
+		return type.getRecipeClass();
 	}
 
-	public static IDrawable doubleItemIcon(IItemProvider item1, IItemProvider item2) {
-		return new DoubleItemIcon(() -> new ItemStack(item1), () -> new ItemStack(item2));
+	public void registerRecipes(IRecipeRegistration registration) {
+		registration.addRecipes(type, recipes.get());
 	}
 
-	public static IDrawable itemIcon(IItemProvider item) {
-		return new DoubleItemIcon(() -> new ItemStack(item), () -> ItemStack.EMPTY);
+	public void registerCatalysts(IRecipeCatalystRegistration registration) {
+		catalysts.forEach(s -> registration.addRecipeCatalyst(s.get(), type));
 	}
 
-	public static void addStochasticTooltip(IGuiItemStackGroup itemStacks, List<ProcessingOutput> results) {
-		addStochasticTooltip(itemStacks, results, 1);
+	public static IDrawable getRenderedSlot() {
+		return BASIC_SLOT;
 	}
-	
-	public static void addStochasticTooltip(IGuiItemStackGroup itemStacks, List<ProcessingOutput> results, int startIndex) {
-		itemStacks.addTooltipCallback((slotIndex, input, ingredient, tooltip) -> {
-			if (input)
-				return;
-			if (slotIndex < startIndex)
-				return;
-			ProcessingOutput output = results.get(slotIndex - startIndex);
+
+	public static IDrawable getRenderedSlot(ProcessingOutput output) {
+		return getRenderedSlot(output.getChance());
+	}
+
+	public static IDrawable getRenderedSlot(float chance) {
+		if (chance == 1)
+			return BASIC_SLOT;
+
+		return CHANCE_SLOT;
+	}
+
+	public static IRecipeSlotTooltipCallback addStochasticTooltip(ProcessingOutput output) {
+		return (view, tooltip) -> {
 			float chance = output.getChance();
 			if (chance != 1)
-				tooltip.add(1, Lang.translate("recipe.processing.chance", chance < 0.01 ? "<1" : (int) (chance * 100))
-					.withStyle(TextFormatting.GOLD));
-		});
+				tooltip.add(1, Lang.translateDirect("recipe.processing.chance", chance < 0.01 ? "<1" : (int) (chance * 100))
+					.withStyle(ChatFormatting.GOLD));
+		};
 	}
 
 	public static List<FluidStack> withImprovedVisibility(List<FluidStack> stacks) {
@@ -128,46 +134,65 @@ public abstract class CreateRecipeCategory<T extends IRecipe<?>> implements IRec
 		return display;
 	}
 
-	public static void addFluidTooltip(IGuiFluidStackGroup fluidStacks, List<FluidIngredient> inputs,
-		List<FluidStack> outputs) {
-		addFluidTooltip(fluidStacks, inputs, outputs, -1);
+	public static IRecipeSlotTooltipCallback addFluidTooltip() {
+		return addFluidTooltip(-1);
 	}
 
-	public static void addFluidTooltip(IGuiFluidStackGroup fluidStacks, List<FluidIngredient> inputs,
-		List<FluidStack> outputs, int index) {
-		List<Integer> amounts = new ArrayList<>();
-		inputs.forEach(f -> amounts.add(f.getRequiredAmount()));
-		outputs.forEach(f -> amounts.add(f.getAmount()));
-
-		fluidStacks.addTooltipCallback((slotIndex, input, fluid, tooltip) -> {
-			if (index != -1 && slotIndex != index)
+	public static IRecipeSlotTooltipCallback addFluidTooltip(int mbAmount) {
+		return (view, tooltip) -> {
+			Optional<FluidStack> displayed = view.getDisplayedIngredient(ForgeTypes.FLUID_STACK);
+			if (displayed.isEmpty())
 				return;
-			
-			if (fluid.getFluid()
-				.isSame(AllFluids.POTION.get())) {
-				ITextComponent name = fluid.getDisplayName();
+
+			FluidStack fluidStack = displayed.get();
+
+			if (fluidStack.getFluid().isSame(AllFluids.POTION.get())) {
+				Component name = fluidStack.getDisplayName();
 				if (tooltip.isEmpty())
 					tooltip.add(0, name);
 				else
 					tooltip.set(0, name);
 
-				ArrayList<ITextComponent> potionTooltip = new ArrayList<>();
-				PotionFluidHandler.addPotionTooltip(fluid, potionTooltip, 1);
-				tooltip.addAll(1, potionTooltip.stream()
-					.collect(Collectors.toList()));
+				ArrayList<Component> potionTooltip = new ArrayList<>();
+				PotionFluidHandler.addPotionTooltip(fluidStack, potionTooltip, 1);
+				tooltip.addAll(1, potionTooltip.stream().toList());
 			}
 
-			int amount = amounts.get(index != -1 ? 0 : slotIndex);
-			ITextComponent text = (Lang.translate("generic.unit.millibuckets", amount)).withStyle(TextFormatting.GOLD);
+			int amount = mbAmount == -1 ? fluidStack.getAmount() : mbAmount;
+			Component text = new TextComponent(String.valueOf(amount)).append(Lang.translateDirect("generic.unit.millibuckets")).withStyle(ChatFormatting.GOLD);
 			if (tooltip.isEmpty())
 				tooltip.add(0, text);
 			else {
-				List<ITextComponent> siblings = tooltip.get(0)
-					.getSiblings();
-				siblings.add(new StringTextComponent(" "));
+				List<Component> siblings = tooltip.get(0).getSiblings();
+				siblings.add(new TextComponent(" "));
 				siblings.add(text);
 			}
-		});
+		};
 	}
 
+	protected static IDrawable asDrawable(AllGuiTextures texture) {
+		return new IDrawable() {
+			@Override
+			public int getWidth() {
+				return texture.width;
+			}
+
+			@Override
+			public int getHeight() {
+				return texture.height;
+			}
+
+			@Override
+			public void draw(PoseStack poseStack, int xOffset, int yOffset) {
+				texture.render(poseStack, xOffset, yOffset);
+			}
+		};
+	}
+
+	public record Info<T extends Recipe<?>>(RecipeType<T> recipeType, Component title, IDrawable background, IDrawable icon, Supplier<List<T>> recipes, List<Supplier<? extends ItemStack>> catalysts) {
+	}
+
+	public interface Factory<T extends Recipe<?>> {
+		CreateRecipeCategory<T> create(Info<T> info);
+	}
 }
