@@ -2,64 +2,47 @@ package com.simibubi.create.content.schematics;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import com.simibubi.create.foundation.tileEntity.SmartTileEntity;
-
-import net.minecraft.block.Block;
-import net.minecraft.block.BlockState;
-import net.minecraft.block.Blocks;
-import net.minecraft.block.FarmlandBlock;
-import net.minecraft.block.GrassPathBlock;
-import net.minecraft.block.SeaPickleBlock;
-import net.minecraft.block.SnowBlock;
-import net.minecraft.block.TurtleEggBlock;
-import net.minecraft.entity.Entity;
-import net.minecraft.entity.EntityType;
-import net.minecraft.entity.item.ArmorStandEntity;
-import net.minecraft.entity.item.BoatEntity;
-import net.minecraft.entity.item.ItemFrameEntity;
-import net.minecraft.entity.item.minecart.AbstractMinecartEntity;
-import net.minecraft.item.BlockItem;
-import net.minecraft.item.Item;
-import net.minecraft.item.ItemStack;
-import net.minecraft.item.Items;
-import net.minecraft.state.properties.BlockStateProperties;
-import net.minecraft.state.properties.SlabType;
-import net.minecraft.tileentity.TileEntity;
+import net.minecraft.world.entity.Entity;
+import net.minecraft.world.entity.decoration.ArmorStand;
+import net.minecraft.world.entity.decoration.ItemFrame;
+import net.minecraft.world.item.Item;
+import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.item.Items;
+import net.minecraft.world.level.block.AbstractBannerBlock;
+import net.minecraft.world.level.block.Block;
+import net.minecraft.world.level.block.Blocks;
+import net.minecraft.world.level.block.DirtPathBlock;
+import net.minecraft.world.level.block.FarmBlock;
+import net.minecraft.world.level.block.SeaPickleBlock;
+import net.minecraft.world.level.block.SnowLayerBlock;
+import net.minecraft.world.level.block.TurtleEggBlock;
+import net.minecraft.world.level.block.entity.BannerBlockEntity;
+import net.minecraft.world.level.block.entity.BlockEntity;
+import net.minecraft.world.level.block.state.BlockState;
+import net.minecraft.world.level.block.state.properties.BlockStateProperties;
+import net.minecraft.world.level.block.state.properties.SlabType;
 
 public class ItemRequirement {
+	public static final ItemRequirement NONE = new ItemRequirement(Collections.emptyList());
+	public static final ItemRequirement INVALID = new ItemRequirement(Collections.emptyList());
 
-	public enum ItemUseType {
-		CONSUME, DAMAGE
-	}
-
-	public static class StackRequirement {
-		public final ItemStack item;
-		public final ItemUseType usage;
-
-		public StackRequirement(ItemUseType usage, ItemStack item) {
-			this.item = item;
-			this.usage = usage;
-		}
-	}
-
-	List<StackRequirement> requiredItems;
-
-	public static ItemRequirement INVALID = new ItemRequirement();
-	public static ItemRequirement NONE = new ItemRequirement();
-
-	private ItemRequirement() {
-	}
+	protected List<StackRequirement> requiredItems;
 
 	public ItemRequirement(List<StackRequirement> requiredItems) {
 		this.requiredItems = requiredItems;
 	}
 
-	public ItemRequirement(ItemUseType usage, ItemStack items) {
-		this(Arrays.asList(new StackRequirement(usage, items)));
+	public ItemRequirement(StackRequirement stackRequirement) {
+		this(List.of(stackRequirement));
+	}
+
+	public ItemRequirement(ItemUseType usage, ItemStack stack) {
+		this(new StackRequirement(stack, usage));
 	}
 
 	public ItemRequirement(ItemUseType usage, Item item) {
@@ -67,88 +50,74 @@ public class ItemRequirement {
 	}
 
 	public ItemRequirement(ItemUseType usage, List<ItemStack> requiredItems) {
-		this(requiredItems.stream().map(req -> new StackRequirement(usage, req)).collect(Collectors.toList()));
+		this(requiredItems.stream().map(req -> new StackRequirement(req, usage)).collect(Collectors.toList()));
 	}
 
-
-	public static ItemRequirement of(BlockState state, TileEntity te) {
+	public static ItemRequirement of(BlockState state, BlockEntity te) {
 		Block block = state.getBlock();
 
-		ItemRequirement baseRequirement;
-		if (block instanceof ISpecialBlockItemRequirement) {
-			baseRequirement = ((ISpecialBlockItemRequirement) block).getRequiredItems(state, te);
+		ItemRequirement requirement;
+		if (block instanceof ISpecialBlockItemRequirement specialBlock) {
+			requirement = specialBlock.getRequiredItems(state, te);
 		} else {
-			baseRequirement = ofBlockState(state, block);
+			requirement = defaultOf(state, te);
 		}
 
-		// Behaviours can add additional required items
-		if (te instanceof SmartTileEntity)
-			baseRequirement = baseRequirement.with(((SmartTileEntity) te).getRequiredItems());
+		if (te instanceof ISpecialBlockEntityItemRequirement specialBE)
+			requirement = requirement.union(specialBE.getRequiredItems(state));
 
-		return baseRequirement;
+		return requirement;
 	}
 
-	private static ItemRequirement ofBlockState(BlockState state, Block block) {
+	private static ItemRequirement defaultOf(BlockState state, BlockEntity te) {
+		Block block = state.getBlock();
 		if (block == Blocks.AIR)
 			return NONE;
 
-		Item item = BlockItem.BY_BLOCK.getOrDefault(state.getBlock(), Items.AIR);
+		Item item = block.asItem();
+		if (item == Items.AIR)
+			return INVALID;
 
 		// double slab needs two items
 		if (state.hasProperty(BlockStateProperties.SLAB_TYPE) && state.getValue(BlockStateProperties.SLAB_TYPE) == SlabType.DOUBLE)
-			return new ItemRequirement(ItemUseType.CONSUME, Arrays.asList(new ItemStack(item, 2)));
+			return new ItemRequirement(ItemUseType.CONSUME, new ItemStack(item, 2));
 		if (block instanceof TurtleEggBlock)
-			return new ItemRequirement(ItemUseType.CONSUME, Arrays.asList(new ItemStack(item, state.getValue(TurtleEggBlock.EGGS).intValue())));
+			return new ItemRequirement(ItemUseType.CONSUME, new ItemStack(item, state.getValue(TurtleEggBlock.EGGS).intValue()));
 		if (block instanceof SeaPickleBlock)
-			return new ItemRequirement(ItemUseType.CONSUME, Arrays.asList(new ItemStack(item, state.getValue(SeaPickleBlock.PICKLES).intValue())));
-		if (block instanceof SnowBlock)
-			return new ItemRequirement(ItemUseType.CONSUME, Arrays.asList(new ItemStack(item, state.getValue(SnowBlock.LAYERS).intValue())));
-		if (block instanceof GrassPathBlock)
-			return new ItemRequirement(ItemUseType.CONSUME, Arrays.asList(new ItemStack(Items.GRASS_BLOCK)));
-		if (block instanceof FarmlandBlock)
-			return new ItemRequirement(ItemUseType.CONSUME, Arrays.asList(new ItemStack(Items.DIRT)));
+			return new ItemRequirement(ItemUseType.CONSUME, new ItemStack(item, state.getValue(SeaPickleBlock.PICKLES).intValue()));
+		if (block instanceof SnowLayerBlock)
+			return new ItemRequirement(ItemUseType.CONSUME, new ItemStack(item, state.getValue(SnowLayerBlock.LAYERS).intValue()));
+		if (block instanceof FarmBlock || block instanceof DirtPathBlock)
+			return new ItemRequirement(ItemUseType.CONSUME, Items.DIRT);
+		if (block instanceof AbstractBannerBlock && te instanceof BannerBlockEntity bannerBE)
+			return new ItemRequirement(new StrictNbtStackRequirement(bannerBE.getItem(), ItemUseType.CONSUME));
 
-		return item == Items.AIR ? INVALID : new ItemRequirement(ItemUseType.CONSUME, item);
+		return new ItemRequirement(ItemUseType.CONSUME, item);
 	}
 
 	public static ItemRequirement of(Entity entity) {
-		EntityType<?> type = entity.getType();
+		if (entity instanceof ISpecialEntityItemRequirement specialEntity)
+			return specialEntity.getRequiredItems();
 
-		if (entity instanceof ISpecialEntityItemRequirement)
-			return ((ISpecialEntityItemRequirement) entity).getRequiredItems();
-
-		if (type == EntityType.ITEM_FRAME) {
-			ItemFrameEntity ife = (ItemFrameEntity) entity;
+		if (entity instanceof ItemFrame itemFrame) {
 			ItemStack frame = new ItemStack(Items.ITEM_FRAME);
-			ItemStack displayedItem = ife.getItem();
+			ItemStack displayedItem = itemFrame.getItem();
 			if (displayedItem.isEmpty())
 				return new ItemRequirement(ItemUseType.CONSUME, Items.ITEM_FRAME);
 			return new ItemRequirement(ItemUseType.CONSUME, Arrays.asList(frame, displayedItem));
 		}
 
-		if (type == EntityType.PAINTING)
-			return new ItemRequirement(ItemUseType.CONSUME, Items.PAINTING);
-
-		if (type == EntityType.ARMOR_STAND) {
+		if (entity instanceof ArmorStand armorStand) {
 			List<ItemStack> requirements = new ArrayList<>();
-			ArmorStandEntity armorStandEntity = (ArmorStandEntity) entity;
-			armorStandEntity.getAllSlots().forEach(requirements::add);
 			requirements.add(new ItemStack(Items.ARMOR_STAND));
+			armorStand.getAllSlots().forEach(requirements::add);
 			return new ItemRequirement(ItemUseType.CONSUME, requirements);
 		}
 
-		if (entity instanceof AbstractMinecartEntity) {
-			AbstractMinecartEntity minecartEntity = (AbstractMinecartEntity) entity;
-			return new ItemRequirement(ItemUseType.CONSUME, minecartEntity.getCartItem().getItem());
+		ItemStack pickedStack = entity.getPickResult();
+		if (pickedStack != null) {
+			return new ItemRequirement(ItemUseType.CONSUME, pickedStack);
 		}
-
-		if (entity instanceof BoatEntity) {
-			BoatEntity boatEntity = (BoatEntity) entity;
-			return new ItemRequirement(ItemUseType.CONSUME, boatEntity.getDropItem().getItem());
-		}
-
-		if (type == EntityType.END_CRYSTAL)
-			return new ItemRequirement(ItemUseType.CONSUME, Items.END_CRYSTAL);
 
 		return INVALID;
 	}
@@ -165,11 +134,7 @@ public class ItemRequirement {
 		return requiredItems;
 	}
 
-	public static boolean validate(ItemStack required, ItemStack present) {
-		return required.isEmpty() || required.getItem() == present.getItem();
-	}
-
-	public ItemRequirement with(ItemRequirement other) {
+	public ItemRequirement union(ItemRequirement other) {
 		if (this.isInvalid() || other.isInvalid())
 			return INVALID;
 		if (this.isEmpty())
@@ -182,4 +147,32 @@ public class ItemRequirement {
 		);
 	}
 
+	public enum ItemUseType {
+		CONSUME, DAMAGE
+	}
+
+	public static class StackRequirement {
+		public final ItemStack stack;
+		public final ItemUseType usage;
+
+		public StackRequirement(ItemStack stack, ItemUseType usage) {
+			this.stack = stack;
+			this.usage = usage;
+		}
+
+		public boolean matches(ItemStack other) {
+			return stack.sameItem(other);
+		}
+	}
+
+	public static class StrictNbtStackRequirement extends StackRequirement {
+		public StrictNbtStackRequirement(ItemStack stack, ItemUseType usage) {
+			super(stack, usage);
+		}
+
+		@Override
+		public boolean matches(ItemStack other) {
+			return ItemStack.isSameItemSameTags(stack, other);
+		}
+	}
 }
